workloads/hello-world/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app: hello-world
    app.kubernetes.io/name: hello-world
  annotations:
    prometheus.io/scrape: "false"
spec:
  selector:
    app: hello-world
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
